--- a/src/partials/index/side-bar/category-set.html
+++ b/src/partials/index/side-bar/category-set.html
@@ -1,34 +1,109 @@
 <!-- <div class="aside-flex"> -->
 <!-- <div class="aside-container"> -->
 <div class="category">
-	<ul class="category__list">
-		<li><button class="category__list--button" type="button" name="All categories">All categories</button>
-		</li>
-		<li><button class="category__list--button" type="button" name="Combined Print and E-Book Fiction">Combined
-				Print
-				and E-book Fiction</button></li>
-		<li><button class="category__list--button" type="button" name="Combined Print and E-Book Nonfiction">Combined
-				Print & E-book Nonfiction</button></li>
-		<li><button class="category__list--button" type="button" name="Hardcover Fiction">Hardcover
-				fiction</button>
-		</li>
-		<li><button class="category__list--button" type="button" name="Hardcover Nonfiction">Hardcover
-				nonfiction</button></li>
-		<li><button class="category__list--button" type="button" name="Trade Fiction Paperback">Paperback trade
-				fiction</button></li>
-		<li><button class="category__list--button" type="button" name="Paperback Nonfiction">Paperback
-				nonfiction</button></li>
-		<li><button class="category__list--button" type="button" name="Advice How-To and Miscellaneous">Advice,
-				how-to &
-				Miscellaneous</button></li>
-		<li><button class="category__list--button" type="button" name="Childrens Middle Grade Hardcover">Children’s
-				middle grade hardcover</button></li>
-		<li><button class="category__list--button" type="button" name="Series Books">Series Books</button></li>
-		<li><button class="category__list--button" type="button" name="Picture Books">Picture Books</button>
-		</li>
-		<li><button class="category__list--button" type="button" name="Young Adult Hardcover">Young Adult
-				Hardcover</button></li>
-	</ul>
+  <ul class="category__list">
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        id="allCategoryBtn"
+        name="All categories"
+      >
+        All categories
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Combined Print and E-Book Fiction"
+      >
+        Combined Print and E-book Fiction
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Combined Print and E-Book Nonfiction"
+      >
+        Combined Print & E-book Nonfiction
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Hardcover Fiction"
+      >
+        Hardcover fiction
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Hardcover Nonfiction"
+      >
+        Hardcover nonfiction
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Trade Fiction Paperback"
+      >
+        Paperback trade fiction
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Paperback Nonfiction"
+      >
+        Paperback nonfiction
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Advice How-To and Miscellaneous"
+      >
+        Advice, how-to & Miscellaneous
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Childrens Middle Grade Hardcover"
+      >
+        Children’s middle grade hardcover
+      </button>
+    </li>
+    <li>
+      <button class="category__list--button" type="button" name="Series Books">
+        Series Books
+      </button>
+    </li>
+    <li>
+      <button class="category__list--button" type="button" name="Picture Books">
+        Picture Books
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Young Adult Hardcover"
+      >
+        Young Adult Hardcover
+      </button>
+    </li>
+  </ul>
 </div>
 
 <!-- </div> -->
