--- a/src/sass/layouts/modal/_modals.scss
+++ b/src/sass/layouts/modal/_modals.scss
@@ -5,13 +5,14 @@
   width: 100%;
   height: 100%;
   background-color: rgba(17, 17, 17, 0.4);
-  z-index: 11;
   overflow: auto;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 1;
+  transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1);
   &.is-hidden {
-    display: none;
-  }
+   opacity: 0;
+   pointer-events: none;
+  
+     }
 }
 
 .modal {
@@ -20,13 +21,13 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 12;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  opacity: 1;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1);
   &.is-hidden {
-    z-index: -2;
     opacity: 0;
     pointer-events: none;
-    visibility: hidden;
   }
 }
+
