--- a/src/sass/layouts/_mobile-menu.scss
+++ b/src/sass/layouts/_mobile-menu.scss
@@ -1,80 +1,73 @@
-.menu-container {
-  position: relative;
-  z-index: 600;
+.mobile-menu {
+  z-index: 20;
+  position: fixed;
+
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  margin: 0px auto;
+  padding: 200px 100px 350px;
 
-  background: $gradient;
-
-  overflow-y: scroll;
-
-  transition: $cubic;
-
-  @media screen and (min-width: 700px) {
-    display: none;
-  }
-
+  background-image: $gradient;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  // overflow-y: scroll;
+  @media (min-width: 400px) {
+    padding: 200px 130px 350px;
+  }
+}
+.mobile-menu .container {
+  padding: 0px;
+}
 
-  &.is-open {
-    transform: translateX(0);
-    // @include minW-Tablet {
-    //   display: none;
-    // }
+.mobile-menu.is-open {
+  transform: translateX(0);
+  @media (min-width: 768px) {
+    display: none;
   }
 }
 
-.mobile-menu {
+.mobile-menu__thumb {
+  padding-top: 40px;
+  padding-left: 0px;
+}
+
+.mobile-menu__item {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 16px;
+  // flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 
+  // gap: 20px;
+
+  color: $secondary-colour;
+  fill: $secondary-colour;
+}
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  margin-bottom: 24px;
+  fill: #fff;
+
+  &:hover,
+  &:focus {
+    color: $primary-colour;
+    fill: $primary-colour;
+    background: $hover-dark-theme;
+    border-radius: 36px;
+    padding: 8px;
+  }
+}
+.mobile-menu__icon {
+  margin-bottom: 24px;
+  margin-left: 4px;
+}
+.mobile-menu__img {
+  width: 100%;
+  top: 60%;
+  left: 0%;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  &__item {
-    display: flex;
-
-    justify-content: center;
-    align-items: center;
-
-    gap: 4px;
-
-    color: $secondary-colour;
-    fill: $secondary-colour;
-
-    &:hover,
-    &:focus {
-      padding: 8px 16px;
-      color: $primary-colour;
-      fill: $primary-colour;
-      background: $hover-dark-theme;
-      border-radius: 36px;
-    }
-  }
-
-  &__link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.02em;
-  }
-
-  &__img {
-    width: 100%;
-    top: -50%;
-    left: -50%;
-    transform: translate(50%, 300%);
-    position: absolute;
-    z-index: 1;
-  }
+  z-index: -1;
 }
