--- a/src/partials/index/main-section/book-section.html
+++ b/src/partials/index/main-section/book-section.html
@@ -1,6 +1,8 @@
 <section class="category-some">
   <div id="all-categories">
-    <h2 class="all-books-title">Best Seller Books</h2>
+    <h2 class="all-books-title">
+      Best Seller <span class="highlight">Books</span>
+    </h2>
     <ul class="categorie-list"></ul>
   </div>
   <div id="sorted-categories">
