--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,6 +1,6 @@
 .header {
   z-index: 100;
-  position: fixed;
+  position: relative;
   width: 100%;
   background: $light-theme-background;
   border: 1.5px solid #111;
