--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,56 +1,55 @@
-<header class="header">
-  <div class="container">
-    <div class="header__container">
-      <a href="./index.html" class="header__logo">
-        <svg class="header__logo-icon" width="24" height="24">
-          <use href="/src/images/sprite.svg#icon-logo"></use>
-        </svg>
-        <span class="header__logo-text">Bookshelf</span>
-      </a>
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item nav__item--current">
-            <a href="./index.html" class="nav__link">HOME</a>
-          </li>
-          <li class="nav__item">
-            <a href="./shop-list.html" class="nav__link">SHOPPING LIST</a>
-            <svg class="nav__link-icon" width="20" height="20">
-              <use href="/src/images/sprite.svg#icon-basket"></use>
-            </svg>
-          </li>
-        </ul>
-        <div class="toggle-switch">
-          <span>
-            <label class="switch">
-              <input id="theme-switch" type="checkbox" />
-              <span class="slider round"></span>
-            </label>
-          </span>
-        </div>
-        <button id="btn-hamburger" class="js-open-menu">
-          <div class="line-1"></div>
-          <div class="line-2"></div>
-          <div class="line-3"></div>
-          <div class="line-4"></div>
-        </button>
-      </nav>
+
+  <header class="header">
+  <div class="header__container">
+    <div class="header__logo">
+      <svg class="header__logo-icon" width="24" height="24">
+        <use href="/src/images/sprite.svg#icon-logo"></use>
+      </svg>
+      <a href="#" class="header__logo-text">Bookshelf</a>
     </div>
+    <nav>
+      <ul class="nav ">
+        <li class="nav__item">
+          <a href="#" class="nav__link">HOME</a>
+        </li>
+        <li class="nav__item">
+          <a href="#"  class="nav__link">SHOPPING LIST</a>
+          <svg class="nav__link-icon" width="20" height="20">
+            <use href="/src/images/sprite.svg#icon-basket"></use>
+          </svg>
+        </li>
+      </ul>
+    </nav>
+     <div class="toggle-switch">
+        <span>
+            <label class="switch">
+                <input id="theme-switch" type="checkbox">
+                <span class="slider round"></span>
+            </label>
+        </span>
+    </div>
+    <button id="btn-hamburger" class="js-open-menu">
+    <div class="line-1"></div>
+    <div class="line-2"></div>
+    <div class="line-3"></div>
+    <div class="line-4"></div> 
+  </button>
+    
   </div>
-</header>
-<!--Мобільне меню-->
-<div class="mobile-menu js-menu-container">
-  <div class="container mobile-menu__container mobile-menu__thumb">
-    <ul class="mobile-menu__list">
+  <!--Мобільне меню-->
+  <div class="menu-container js-menu-container" id="mobile-menu">
+    <ul class="mobile-menu">
       <li class="mobile-menu__item">
-        <a href="./index.html" class="mobile-menu__link">HOME</a>
+        <a href="#" class="mobile-menu__link">HOME</a>
       </li>
       <li class="mobile-menu__item">
-        <a href="./shop-list.html" class="mobile-menu__link">SHOPPING LIST</a>
+        <a href="#" class="mobile-menu__link">SHOPPING LIST</a>
         <svg class="mobile-menu__icon" width="20" height="20">
           <use href="/src/images/sprite.svg#icon-basket"></use>
         </svg>
       </li>
+      <div>
     </ul>
   </div>
-  <img class="mobile-menu__img" src="/src/images/books.png" alt="books" />
-</div>
+</header>
+
