--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,118 +1,130 @@
 .header {
-  z-index: 100;
-  position: relative;
+  // position: absolute;
+  z-index: 4;
+  top: 0;
+  left: 0;
   width: 100%;
-  background: $light-theme-background;
-  border: 1.5px solid #111;
-  border-radius: 0 0 8px 8px;
-  // height: 64px;
-}
-.header .container {
-  padding-top: 0;
-  padding-bottom: 0;
-  height: 64px;
 
   @include minW-Tablet {
-    height: 72px;
-    padding-top: 14px;
-    padding-bottom: 13px;
+    position: relative;
   }
-}
-.header__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
 
-.header__logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  &__container {
+    padding-left: $paddingPhone;
+    padding-right: $paddingPhone;
+    height: 64px;
+    border: 1.5px solid;
+    border-radius: 0px 0px 8px 8px;
 
-  gap: 8px;
-}
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 
-.header__logo-text {
-  color: $primary-colour;
+    @include maxW-Tablet {
+      padding-left: $paddingTablet;
+      padding-right: $paddingTablet;
+      justify-content: space-between;
 
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.29;
+      height: 72px;
+    }
 
-  letter-spacing: -0.04em;
-}
-.nav {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  padding-top: 18px;
-  padding-bottom: 18px;
+    @include maxW-Dt {
+      padding-left: $paddingDt;
+      padding-right: $paddingDt;
+    }
+  }
 
-  @media (min-width: 768px) {
-    padding-top: 13px;
-    padding-bottom: 14px;
+  &__logo {
+    display: flex;
     justify-content: center;
-  }
+    align-items: center;
+    margin-left: 24px;
 
-  @media (min-width: 1440px) {
-    padding-top: 0px;
-    padding-bottom: 0px;
+    gap: 8px;
+
+    @include maxW-Tablet {
+    }
+  }
+  &__logo-text {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.29;
+
+    letter-spacing: -0.04em;
   }
 }
 
-.nav__list {
+.nav {
   display: flex;
   align-items: center;
+  padding: 0px;
   gap: 16px;
-  // margin-left: 40px;
+  margin-left: 56px;
 
   @include maxW(767px) {
     display: none;
   }
-  @include minW(767px) {
-    margin-left: 40px;
-  }
-
   @include minW-Dt {
-    margin-left: 76px;
+    margin-left: 298px;
   }
-  @media (min-width: 1440px) {
-    gap: 24px;
+
+  &__item {
+    display: flex;
+    align-items: center;
+    padding: 7px 16px;
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.04em;
+    // color: $primary-colour;
+    &:hover,
+    &:focus {
+      font-weight: 700;
+      // padding: 8px 16px;
+      color: $primary-colour;
+      fill: $primary-colour;
+      background: $hover-dark-theme;
+      border-radius: 36px;
+    }
+  }
+
+  // &__link {
+  // }
+
+  &__link-icon {
+    margin-left: 8px;
   }
 }
 
-.nav__item {
-  display: flex;
-  align-items: center;
-  color: $primary-colour;
+.menu-container {
+  display: none;
+  position: relative;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  margin: 0px auto;
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.29;
-  letter-spacing: -0.04em;
-  &:hover,
-  &:focus {
-    font-weight: 700;
-    color: $primary-colour;
-    fill: $primary-colour;
-    background: $hover-dark-theme;
-    border-radius: 36px;
-    padding: 8px;
+  background: $gradient;
+
+  overflow-y: scroll;
+
+  transition: $cubic;
+
+  @include minW-Phone {
+  }
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+
+  &.is-open {
+    transform: translateX(0);
   }
 }
-.nav__item--current {
-  font-weight: 700;
-  color: $primary-colour;
-  background: $hover-dark-theme;
-  border-radius: 36px;
-  padding: 8px;
-}
 
-.nav__link-icon {
-  margin-left: 4px;
-}
 ///////////// button burger menu /////////////
 
 #btn-hamburger {
@@ -122,7 +134,7 @@
   outline: 0;
   background: transparent;
   border-radius: 2px;
-  // padding: 0.6em;
+  padding: 0.6em;
   cursor: pointer;
   .line-2,
   .line-4 {
@@ -160,7 +172,62 @@
   }
 }
 
+////////////// mobile menu ////////////////
+
+.mobile-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 16px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  &__item {
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    gap: 4px;
+
+    color: $secondary-colour;
+    fill: $secondary-colour;
+
+    &:hover,
+    &:focus {
+      padding: 8px 16px;
+      color: $primary-colour;
+      fill: $primary-colour;
+      background: $hover-dark-theme;
+      border-radius: 36px;
+    }
+  }
+
+  &__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+  }
+}
+
 //////////theme switcher/////////////////
+
+.dark {
+  background-color: $dark-theme-background;
+  color: $light-theme-background;
+  fill: #ffffff;
+}
+
+.light {
+  background-color: $light-theme-background;
+  color: $dark-theme-background;
+}
 
 .toggle-switch {
   display: flex;
@@ -200,7 +267,7 @@
   width: 20px;
   left: 18px;
   bottom: 2px;
-
+  // background-color: #fff;
   background: linear-gradient(180deg, #ffffff 0%, #f7f7f7 100%);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), 0px 2px 2px rgba(0, 0, 0, 0.1),
     1px 2px 4px rgba(0, 0, 0, 0.1);
