--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,10 +10,10 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item nav__item--current">
-            <a href="./index.html" class="nav__link">HOME</a>
+            <a href="/src/index.html" class="nav__link">HOME</a>
           </li>
           <li class="nav__item">
-            <a href="./shop-list.html" class="nav__link">SHOPPING LIST</a>
+            <a href="/src/shop-list.html" class="nav__link">SHOPPING LIST</a>
             <svg class="nav__link-icon" width="20" height="20">
               <use href="/src/images/sprite.svg#icon-basket"></use>
             </svg>
