--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -28,4 +28,4 @@
 @import './layouts/modal/modals';
 @import './layouts/modal/register-modal';
 @import './layouts/modal/login-modal';
-@import './layouts/modal/about-book-modal;
+@import './layouts/modal/about-book-modal';
