--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
       </a>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item nav__item--current">
+          <li class="nav__item">
             <a href="/src/index.html" class="nav__link">HOME</a>
           </li>
           <li class="nav__item">
@@ -45,10 +45,12 @@
         <a href="./index.html" class="mobile-menu__link">HOME</a>
       </li>
       <li class="mobile-menu__item">
-        <a href="./shop-list.html" class="mobile-menu__link">SHOPPING LIST</a>
-        <svg class="mobile-menu__icon" width="20" height="20">
-          <use href="/src/images/sprite.svg#icon-basket"></use>
-        </svg>
+        <a href="./shop-list.html" class="mobile-menu__link"
+          >SHOPPING LIST
+          <svg class="mobile-menu__icon" width="20" height="20">
+            <use href="/src/images/sprite.svg#icon-basket"></use>
+          </svg>
+        </a>
       </li>
     </ul>
   </div>
