--- a/src/sass/base/_resets.scss
+++ b/src/sass/base/_resets.scss
@@ -1,15 +1,15 @@
 body {
-    font-family: 'DM Sans', sans-serif;
-    margin: 0 auto;
-    max-width: 1440px;
-    padding: 0;
-    background-color: $main-background;
-
+  font-family: 'DM Sans', sans-serif;
+  margin: 0 auto;
+  max-width: 1440px;
+  padding: 0;
+  background-color: $main-background;
+  overflow: overlay;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 h1,
@@ -19,19 +19,18 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
