--- a/src/sass/layouts/_dark-theme.scss
+++ b/src/sass/layouts/_dark-theme.scss
@@ -52,6 +52,9 @@
 .dark .book h3 {
   color: $secondary-colour;
 }
+.dark .books h3 {
+  color: $secondary-colour;
+}
 .dark .btn-look {
   color: $secondary-colour;
   background-color: $modal-dark-background;
@@ -76,4 +79,30 @@
 .dark .modal-id-buttons {
   background: $modal-dark-background;
   color: $secondary-colour;
+}
+
+.dark .shopping-list__title {
+  color: $secondary-colour;
+}
+.dark .card {
+  background: $modal-dark-background;
+}
+.dark .card__title {
+  color: $secondary-colour;
+}
+.dark .card__description {
+  color: $secondary-colour;
+}
+.dark .cart-empty__text {
+  color: $secondary-colour;
+}
+
+.dark .all-books-title {
+  color: $secondary-colour;
+}
+.dark .storage-description {
+  color: rgba(255, 255, 255, 0.5);
+}
+.dark ::-webkit-scrollbar-thumb {
+  background: #111;
 }
