--- a/src/sass/layouts/_mobile-menu.scss
+++ b/src/sass/layouts/_mobile-menu.scss
@@ -22,11 +22,13 @@
 
 .mobile-menu.is-open {
   transform: translateX(0);
-  
-    @media (min-width: 768px) {
-      display: none;
-    }
-  
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+  .header {
+    position: fixed;
+  }
 }
 
 .mobile-menu__thumb {
@@ -36,7 +38,6 @@
 
 .mobile-menu__item {
   display: flex;
-  // flex-direction: column;
   justify-content: flex-start;
   align-items: center;
 
@@ -46,11 +47,14 @@
   fill: $secondary-colour;
 }
 .mobile-menu__link {
+  display: flex;
+  align-items: center;
+  padding: 8px 16px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.02em;
-  margin-bottom: 24px;
+  // margin-bottom: 24px;
   fill: #fff;
 
   &:hover,
@@ -59,12 +63,14 @@
     fill: $primary-colour;
     background: $hover-dark-theme;
     border-radius: 36px;
-    padding: 8px;
+    padding: 8px 16px;
   }
 }
 .mobile-menu__icon {
-  margin-bottom: 24px;
-  margin-left: 4px;
+  // display: flex;
+  // align-items: center;
+  // margin-bottom: 24px;
+  // margin-left: 4px;
 }
 .mobile-menu__img {
   width: 100%;
