--- a/src/sass/layouts/_shop-list.scss
+++ b/src/sass/layouts/_shop-list.scss
@@ -20,6 +20,8 @@ button {
 .shop-list-container {
 	display: flex;
 	align-items: flex-start;
+	height: 100%;
+	max-height: 956px;
 	// margin-top: 64px;
 	padding-bottom: 40px;
 	@media (min-width: 768px) {
@@ -74,19 +76,20 @@ button {
 }
 
 .cart {
-	// display: flex;
-	// justify-content: center;
 	@media (min-width: 768px) {
 	}
 
 	@media (min-width: 1024px) {
 	}
 
+	&__pagination {
+		margin-top: 20px;
+	}
+
 	&__list {
 		display: flex;
 		flex-direction: column;
-		// justify-content: space-between;
-		// justify-content: stretch;
+		height: 740px;
 		gap: 20px;
 		margin-top: 40px;
 		width: 100%;
@@ -301,6 +304,7 @@ button {
 	}
 
 	&__author {
+		max-width: 95px;
 		font-style: italic;
 		font-weight: 400;
 		font-size: 12px;
@@ -377,6 +381,12 @@ button {
 		width: 32px;
 		height: 11px;
 
+		&:hover,
+		&:focus {
+			mix-blend-mode: luminosity;
+			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
+		}
+
 		@media (min-width: 768px) {
 			width: 48px;
 			height: 15px;
@@ -385,6 +395,11 @@ button {
 	&--apple {
 		width: 16px;
 		height: 16px;
+		&:hover,
+		&:focus {
+			mix-blend-mode: luminosity;
+			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
+		}
 		@media (min-width: 768px) {
 			width: 28px;
 			height: 27px;
@@ -394,6 +409,12 @@ button {
 	&--bookshop {
 		width: 16px;
 		height: 16px;
+
+		&:hover,
+		&:focus {
+			mix-blend-mode: luminosity;
+			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
+		}
 		@media (min-width: 768px) {
 			width: 32px;
 			height: 30px;
