--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,13 +21,17 @@
         </ul>
         <div class="toggle-switch">
           <span>
-            <label class="switch">
+            <label for="theme-switch" class="switch">
               <input id="theme-switch" type="checkbox" />
               <span class="slider round"></span>
             </label>
           </span>
         </div>
-        <button id="btn-hamburger" class="js-open-menu">
+        <button
+          id="btn-hamburger"
+          class="js-open-menu"
+          aria-label="burger-menu"
+        >
           <div class="line-1"></div>
           <div class="line-2"></div>
           <div class="line-3"></div>
