--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,6 +16,7 @@
 @import './layouts/header';
 @import './layouts/dark-theme';
 @import './layouts/mobile-menu';
+@import './layouts/anchor-btn';
 
 // Index-Page styles
 @import "./layouts/category-set";
