--- a/src/partials/modals/about-book-modal.html
+++ b/src/partials/modals/about-book-modal.html
@@ -1,5 +1,10 @@
 <div class="modal is-hidden about-book-modal">
-  <button id="modal-close" class="close-modal-btn" type="button">
+  <button
+    id="modal-close"
+    class="close-modal-btn"
+    type="button"
+    aria-label="close"
+  >
     <svg class="button--close-icon" width="28" height="28">
       <use href="./images/sprite.svg#close"></use>
     </svg>
