--- a/src/sass/layouts/_shop-list.scss
+++ b/src/sass/layouts/_shop-list.scss
@@ -6,10 +6,6 @@ button {
 	display: block;
 }
 
-// .current-page {
-// 	background-color: $additional-brand-colour;
-// }
-
 .icon-delete {
 	display: block;
 	padding: 0;
@@ -24,20 +20,15 @@ button {
 	// max-height: 956px;
 	// margin-top: 64px;
 	padding-bottom: 40px;
-	@media (min-width: 768px) {
+	@media (min-width: $tabletMinpx) {
 		margin-top: 0;
-	}
-
-	@media (min-width: 1024px) {
 	}
 }
 
 .shop-aside {
 	display: none;
 
-	@media (min-width: 768px) {
-	}
-	@media (min-width: 1024px) {
+	@media (min-width: $desktopMin) {
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
@@ -47,11 +38,6 @@ button {
 
 .shopping-list {
 	width: 100%;
-	@media (min-width: 768px) {
-	}
-
-	@media (min-width: 1024px) {
-	}
 }
 .shopping-list__title {
 	font-family: "DM Sans";
@@ -62,33 +48,20 @@ button {
 
 	color: $primary-colour;
 
-	@media (min-width: 768px) {
+	@media (min-width: $tabletMinpx) {
 		font-size: 48px;
 		line-height: 1.08;
 	}
-
-	@media (min-width: 1024px) {
-	}
-
 	&--colored {
 		color: $main-brand-colour;
 	}
 }
 
 .cart {
-	@media (min-width: 768px) {
-	}
-
-	@media (min-width: 1024px) {
-	}
-
 	&__pagination {
 		margin-top: 20px;
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			margin-top: 40px;
-		}
-
-		@media (min-width: 1024px) {
 		}
 	}
 
@@ -99,20 +72,12 @@ button {
 		gap: 20px;
 		margin-top: 40px;
 		width: 100%;
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			height: 679px;
-		}
-
-		@media (min-width: 1024px) {
 		}
 	}
 
 	&__item {
-		@media (min-width: 768px) {
-		}
-
-		@media (min-width: 1024px) {
-		}
 	}
 }
 .cart-empty {
@@ -127,11 +92,8 @@ button {
 	margin-left: auto;
 	margin-right: auto;
 
-	@media (min-width: 768px) {
+	@media (min-width: $tabletMinpx) {
 		max-width: 349px;
-	}
-
-	@media (min-width: 1024px) {
 	}
 
 	&__text {
@@ -149,21 +111,15 @@ button {
 
 		color: rgba(0, 0, 0, 0.6);
 
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			padding: 0;
 			width: 349px;
 
 			font-size: 18px;
 			line-height: 1.35;
 		}
-
-		@media (min-width: 1024px) {
-		}
 	}
 	&__img {
-		// margin: 0;
-		// padding: 0;
-		// border: none;
 		display: block;
 		max-width: 100%;
 		height: auto;
@@ -180,12 +136,9 @@ button {
 	border: 2px solid rgba(79, 46, 232, 0.4);
 	border-radius: 16px;
 
-	@media (min-width: 768px) {
+	@media (min-width: $tabletMinpx) {
 		gap: 24px;
 		padding: 24px;
-	}
-
-	@media (min-width: 1024px) {
 	}
 
 	&__img {
@@ -195,7 +148,7 @@ button {
 		object-fit: cover;
 
 		border-radius: 8px;
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			min-width: 116px;
 			height: 165px;
 		}
@@ -205,12 +158,6 @@ button {
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-
-		@media (min-width: 768px) {
-		}
-
-		@media (min-width: 1024px) {
-		}
 	}
 
 	&__title {
@@ -230,10 +177,10 @@ button {
 
 		color: $primary-colour;
 
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			max-width: 460px;
 		}
-		@media (min-width: 1024px) {
+		@media (min-width: $desktopMin) {
 			max-width: 745px;
 		}
 	}
@@ -254,10 +201,10 @@ button {
 
 		color: $paragraph-colour;
 
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			max-width: 460px;
 		}
-		@media (min-width: 1024px) {
+		@media (min-width: $desktopMin) {
 			max-width: 745px;
 		}
 	}
@@ -282,14 +229,14 @@ button {
 		text-overflow: ellipsis;
 
 		color: $primary-colour;
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			// width: 100%;
 
 			margin-top: 14px;
 			max-width: none;
 			max-height: 68px;
 		}
-		@media (min-width: 1024px) {
+		@media (min-width: $desktopMin) {
 			// width: 100%;
 			// max-width: 808px;
 		}
@@ -302,11 +249,8 @@ button {
 		align-items: flex-end;
 		margin-top: 14px;
 		// width: 100%;
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			margin-top: 32px;
-		}
-
-		@media (min-width: 1024px) {
 		}
 	}
 
@@ -323,12 +267,6 @@ button {
 		text-overflow: ellipsis;
 
 		color: $paragraph-colour;
-
-		@media (min-width: 768px) {
-		}
-
-		@media (min-width: 1024px) {
-		}
 	}
 
 	&__shops {
@@ -337,11 +275,8 @@ button {
 		gap: 8px;
 
 		filter: grayscale(1);
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			gap: 16px;
-		}
-
-		@media (min-width: 1024px) {
 		}
 	}
 
@@ -369,7 +304,7 @@ button {
 		transition-duration: 250ms;
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			padding: 8px;
 			top: 24px;
 			right: 24px;
@@ -394,7 +329,7 @@ button {
 			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 		}
 
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			width: 48px;
 			height: 15px;
 		}
@@ -407,7 +342,7 @@ button {
 			mix-blend-mode: luminosity;
 			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 		}
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			width: 28px;
 			height: 27px;
 		}
@@ -422,7 +357,7 @@ button {
 			mix-blend-mode: luminosity;
 			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 		}
-		@media (min-width: 768px) {
+		@media (min-width: $tabletMinpx) {
 			width: 32px;
 			height: 30px;
 		}
