--- a/src/sass/layouts/_shop-list.scss
+++ b/src/sass/layouts/_shop-list.scss
@@ -20,7 +20,7 @@ button {
 	// max-height: 956px;
 	// margin-top: 64px;
 	padding-bottom: 40px;
-	@media (min-width: $tabletMinpx) {
+	@media (min-width: $tabletMin) {
 		margin-top: 0;
 	}
 }
@@ -48,7 +48,7 @@ button {
 
 	color: $primary-colour;
 
-	@media (min-width: $tabletMinpx) {
+	@media (min-width: $tabletMin) {
 		font-size: 48px;
 		line-height: 1.08;
 	}
@@ -60,7 +60,7 @@ button {
 .cart {
 	&__pagination {
 		margin-top: 20px;
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			margin-top: 40px;
 		}
 	}
@@ -72,7 +72,7 @@ button {
 		gap: 20px;
 		margin-top: 40px;
 		width: 100%;
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			height: 679px;
 		}
 	}
@@ -92,7 +92,7 @@ button {
 	margin-left: auto;
 	margin-right: auto;
 
-	@media (min-width: $tabletMinpx) {
+	@media (min-width: $tabletMin) {
 		max-width: 349px;
 	}
 
@@ -111,7 +111,7 @@ button {
 
 		color: rgba(0, 0, 0, 0.6);
 
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			padding: 0;
 			width: 349px;
 
@@ -136,7 +136,7 @@ button {
 	border: 2px solid rgba(79, 46, 232, 0.4);
 	border-radius: 16px;
 
-	@media (min-width: $tabletMinpx) {
+	@media (min-width: $tabletMin) {
 		gap: 24px;
 		padding: 24px;
 	}
@@ -148,7 +148,7 @@ button {
 		object-fit: cover;
 
 		border-radius: 8px;
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			min-width: 116px;
 			height: 165px;
 		}
@@ -177,7 +177,7 @@ button {
 
 		color: $primary-colour;
 
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			max-width: 460px;
 		}
 		@media (min-width: $desktopMin) {
@@ -201,7 +201,7 @@ button {
 
 		color: $paragraph-colour;
 
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			max-width: 460px;
 		}
 		@media (min-width: $desktopMin) {
@@ -229,7 +229,7 @@ button {
 		text-overflow: ellipsis;
 
 		color: $primary-colour;
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			// width: 100%;
 
 			margin-top: 14px;
@@ -249,7 +249,7 @@ button {
 		align-items: flex-end;
 		margin-top: 14px;
 		// width: 100%;
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			margin-top: 32px;
 		}
 	}
@@ -275,7 +275,7 @@ button {
 		gap: 8px;
 
 		filter: grayscale(1);
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			gap: 16px;
 		}
 	}
@@ -304,7 +304,7 @@ button {
 		transition-duration: 250ms;
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			padding: 8px;
 			top: 24px;
 			right: 24px;
@@ -329,7 +329,7 @@ button {
 			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 		}
 
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			width: 48px;
 			height: 15px;
 		}
@@ -342,7 +342,7 @@ button {
 			mix-blend-mode: luminosity;
 			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 		}
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			width: 28px;
 			height: 27px;
 		}
@@ -357,7 +357,7 @@ button {
 			mix-blend-mode: luminosity;
 			filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 		}
-		@media (min-width: $tabletMinpx) {
+		@media (min-width: $tabletMin) {
 			width: 32px;
 			height: 30px;
 		}
