--- a/src/sass/layouts/_mobile-menu.scss
+++ b/src/sass/layouts/_mobile-menu.scss
@@ -4,7 +4,7 @@
 
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   padding: 200px 100px 350px;
 
@@ -66,12 +66,12 @@
     padding: 8px 16px;
   }
 }
-.mobile-menu__icon {
-  // display: flex;
-  // align-items: center;
-  // margin-bottom: 24px;
-  // margin-left: 4px;
-}
+// .mobile-menu__icon {
+//   // display: flex;
+//   // align-items: center;
+//   // margin-bottom: 24px;
+//   // margin-left: 4px;
+// }
 .mobile-menu__img {
   width: 100%;
   top: 60%;
