--- a/src/sass/layouts/_books-list.scss
+++ b/src/sass/layouts/_books-list.scss
@@ -14,6 +14,9 @@
 
 }
 
+// .categorie-list{
+//     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+// }
 @media screen and (max-width: $phoneMax) {
     .categorie-list {
         
@@ -252,6 +255,8 @@
     margin-left: auto;
     border: 2px solid #4F2EE8;
     border-radius: 40px;
+
+    transition: background-color 500ms $cubic;
 
         &:hover,
         &:focus{
