--- a/src/sass/layouts/_mobile-menu.scss
+++ b/src/sass/layouts/_mobile-menu.scss
@@ -38,7 +38,7 @@
 
 .mobile-menu__item {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 
   // gap: 20px;
