--- a/src/partials/header-index.html
+++ b/src/partials/header-index.html
@@ -10,7 +10,9 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="/src/index.html" class="nav__link">HOME</a>
+            <a href="/src/index.html" class="nav__link nav__item--current"
+              >HOME</a
+            >
           </li>
           <li class="nav__item">
             <a href="/src/shop-list.html" class="nav__link">SHOPPING LIST</a>
@@ -46,7 +48,9 @@
   <div class="container mobile-menu__container mobile-menu__thumb">
     <ul class="mobile-menu__list">
       <li class="mobile-menu__item">
-        <a href="./index.html" class="mobile-menu__link">HOME</a>
+        <a href="./index.html" class="mobile-menu__link nav__item--current"
+          >HOME</a
+        >
       </li>
       <li class="mobile-menu__item">
         <a href="./shop-list.html" class="mobile-menu__link"
