--- a/src/partials/index/side-bar/category-set.html
+++ b/src/partials/index/side-bar/category-set.html
@@ -1,5 +1,3 @@
-<!-- <div class="aside-flex"> -->
-<!-- <div class="aside-container"> -->
 <div class="category">
   <ul class="category__list">
     <li>
@@ -103,9 +101,64 @@
         Young Adult Hardcover
       </button>
     </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Business Books"
+      >
+        Business Books
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Mass Market Monthly"
+      >
+        Mass Market Monthly
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Middle Grade Paperback Monthly"
+      >
+        Middle Grade Paperback Monthly
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Audio Nonfiction"
+      >
+        Audio Nonfiction
+      </button>
+    </li>
+    <li>
+      <button class="category__list--button" type="button" name="Audio Fiction">
+        Audio Fiction
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Graphic Books and Manga"
+      >
+        Graphic Books and Manga
+      </button>
+    </li>
+    <li>
+      <button
+        class="category__list--button"
+        type="button"
+        name="Young Adult Paperback Monthly"
+      >
+        Young Adult Paperback Monthly
+      </button>
+    </li>
   </ul>
 </div>
-
-<!-- </div> -->
-
-<!-- </div> -->
