--- a/src/partials/header-index.html
+++ b/src/partials/header-index.html
@@ -9,10 +9,8 @@
       </a>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item">
-            <a href="/src/index.html" class="nav__link nav__item--current"
-              >HOME</a
-            >
+          <li class="nav__item nav__item--current">
+            <a href="/src/index.html" class="nav__link">HOME</a>
           </li>
           <li class="nav__item">
             <a href="/src/shop-list.html" class="nav__link">SHOPPING LIST</a>
