--- a/src/partials/header-shop-list.html
+++ b/src/partials/header-shop-list.html
@@ -12,10 +12,8 @@
           <li class="nav__item">
             <a href="/src/index.html" class="nav__link">HOME</a>
           </li>
-          <li class="nav__item">
-            <a href="/src/shop-list.html" class="nav__link nav__item--current"
-              >SHOPPING LIST</a
-            >
+          <li class="nav__item nav__item--current">
+            <a href="/src/shop-list.html" class="nav__link">SHOPPING LIST</a>
             <svg class="nav__link-icon" width="20" height="20">
               <use href="/src/images/sprite.svg#icon-basket"></use>
             </svg>
