--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 @import "./utilities/placeholders";
 
 // Base styles
+@import "./base/fonts";
 @import "./base/resets";
 @import "./base/pagination.scss";
 
@@ -13,10 +14,10 @@
 @import "./components/slider";
 
 // Multipage styles
-@import './layouts/header';
-@import './layouts/dark-theme';
-@import './layouts/mobile-menu';
-@import './layouts/anchor-btn';
+@import "./layouts/header";
+@import "./layouts/dark-theme";
+@import "./layouts/mobile-menu";
+@import "./layouts/anchor-btn";
 
 // Index-Page styles
 @import "./layouts/category-set";
@@ -26,7 +27,7 @@
 @import "./layouts/_shop-list.scss";
 
 // Modal styles
-@import './layouts/modal/modals';
-@import './layouts/modal/register-modal';
-@import './layouts/modal/login-modal';
-@import './layouts/modal/about-book-modal';
+@import "./layouts/modal/modals";
+@import "./layouts/modal/register-modal";
+@import "./layouts/modal/login-modal";
+@import "./layouts/modal/about-book-modal";
