--- a/src/sass/layouts/_books-list.scss
+++ b/src/sass/layouts/_books-list.scss
@@ -139,8 +139,6 @@
     transform: translateY(10%);
 }
 
-
-
 .thumb {
     height: 485px;
     width: 335px;
@@ -190,10 +188,6 @@
     }
 }
 
-
-
-
-
 .book-name {
     margin-top: 14px;
     text-overflow: ellipsis;
@@ -217,7 +211,7 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
-    color: #B4AFAF;
+    color: #111111;
     margin-bottom: 18px;
 }
 
@@ -229,7 +223,7 @@
     
     letter-spacing: -0.04em;
     
-    color: #B4AFAF;
+    color: #111111;
 }
 
 .btn-look {
