--- a/src/sass/layouts/_dark-theme.scss
+++ b/src/sass/layouts/_dark-theme.scss
@@ -105,6 +105,12 @@
 .dark .all-books-title {
   color: $secondary-colour;
 }
+.dark .categorie-name{
+  color: $secondary-colour
+}
+.dark .book-author{
+  color: $secondary-colour;
+}
 .dark .storage-description {
   color: rgba(255, 255, 255, 0.5);
 }
